# puppibuff

./: .gitignore  flowbdt.py  main.py  pyproject.toml  solvers.py
codecs/: __init__.py  codec.py  fixedmcodec.py
datasets/: __init__.py  dataset.py  flatpuppijet.py  puppijetm16.py
experiments/: alpha_gridsearch.py  clusteredl1puppi.py  flatpuppijet.py  loss_vs_nodes.py
pcodecs/: __init__.py  codec.py  fixedmcodec.py
scripts/: cluster_l1puppi.py
src/puppibuff/: __init__.py  build_trainds.py  flowbdt.py  setup_from_config.py  solvers.py  weighting.py
src/puppibuff/analyses/: __init__.py  losses.py  node_analysis.py  plot_distributions.py  plotting.py  resources.py
src/puppibuff/codecs/: __init__.py  codec.py  fixedmcodec.py  maskedmcodec.py
src/puppibuff/configs/: __init__.py  clusteredl1puppi.py  config.py  flatpuppijet.py
src/puppibuff/datasets/: __init__.py  clusteredl1puppi.py  dataset.py  flatpuppijet.py  puppijetm16.py
src/puppibuff/validation/: plot_distributions.py
validation/: __init__.py
