[project]
name = "puppibuff"
version = "0.0.0"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "xgboost",
    "joblib",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "puppibuff", 
    "puppibuff.datasets", 
    "puppibuff.codecs",
    "puppibuff.analyses"
]

[tool.mypy]
disable_error_code = ["import-untyped", "import-not-found"]